# pd-bhack

./: .luacheckrc  .luarc.json  CMakeLists.txt  LICENSE  README.md  bhack-help.pd  bhack-test.pd
resources/: fix_canvas.py
src/: bhack.arithmser.pd_lua  bhack.bpf-help.pd  bhack.bpf.pd_lua  bhack.chord-help.pd  bhack.chord.pd_lua  bhack.chords-help.pd  bhack.chords.pd_lua  bhack.collect-help.pd  bhack.collect.pd_lua  bhack.define-help.pd  bhack.define.pd_lua  bhack.depth-help.pd  bhack.depth.pd_lua  bhack.f2m.pd_lua  bhack.filter-help.pd  bhack.filter.pd_lua  bhack.ftom.pd_lua  bhack.getkey.pd_lua  bhack.harmonicserie.pd_lua  bhack.iterate-help.pd  bhack.iterate.pd_lua  bhack.length-help.pd  bhack.length.pd_lua  bhack.list.pd_lua  bhack.llll-help.pd  bhack.llll.pd_lua  bhack.lua  bhack.m2n.pd_lua  bhack.mklist-help.pd  bhack.mklist.pd_lua  bhack.mton-help.pd  bhack.mton.pd_lua  bhack.nth-help.pd  bhack.nth-random.pd_lua  bhack.nth.pd_lua  bhack.op-help.pd  bhack.op.pd_lua  bhack.print-help.pd  bhack.print-helppd.pd  bhack.print.pd_lua  (+15 more)
src/score/: constants.lua  font.lua  geometry.lua  init.lua  measure.lua  notes.lua  rhythm.lua  score.lua  utils.lua  voice.lua
src/score/rendering/: barlines.lua  init.lua  notes.lua  staff.lua  stems.lua  ties.lua  time.lua  tuplets.lua  utils.lua
src/score/utils/: init.lua  musicxml.lua
tests/: bhack-oscofo.pd  onsets_spec.lua  score.txt  ties_spec.lua  tuplets_spec.lua  wrong-tree.pd
tutorial/: bhack.voice-extended-techniques.pd  bhack.voice-random-generator.pd  oscofo.txt
